# ocaml-subtyp

./: .gitignore  META  Makefile  dune  dune-project  opam  subtyp.ml  subtyp.mli  subtyp.mllib  subtyp_open.ml  subtyp_zarith.ml  subtyp_zarith.mli
